--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DanceOnline!</title>
+    <link rel="stylesheet" href="fonts/fonts.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
