--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <title>DanceOnline!</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
     <section id="home">
         <div class="head">
             <span>Танцуй</span>
         </div>
+        <div class="scroll-go"></div>
+    <div class="video-bg">
+        <div class="video-fg">
+            <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/GPEIwLqfzzY?rel=0&enablejsapi=1&autoplay=1&controls=0&showinfo=0&loop=1&iv_load_policy=3&playlist=GPEIwLqfzzY" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
     </section>
 </body>
 </html>
