--- a/index.html
+++ b/index.html
@@ -5,21 +5,36 @@
     <meta charset="UTF-8">
     <title>DanceOnline!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+
+    </script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/script.js"></script>
 </head>
 
 <body>
-    <section id="home">
+    <section id="home" class="wow fadeIn">
         <div class="head">
             <span>Танцуй</span>
+            <div class="button">Авторизация</div>
+
         </div>
         <div class="scroll-go"></div>
-        <div class="video-bg">
-            <div class="video-fg">
-                <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/GPEIwLqfzzY?rel=0&enablejsapi=1&autoplay=1&controls=0&showinfo=0&loop=1&iv_load_policy=3&playlist=GPEIwLqfzzY" frameborder="0" allowfullscreen></iframe>
+        <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/bDChhe7hhII?rel=0&enablejsapi=1&autoplay=1&controls=0&showinfo=0&loop=1&iv_load_policy=3&playlist=bDChhe7hhII" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <section id="about">
+        <div class="wrap">
+            <div class="about-left">
+                <h2>О сервисе</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
             </div>
+            <div class="about-right"></div>
         </div>
+
     </section>
 </body>
 
