end about section.Start music section.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
 
     <section id="about">
         <div class="wrap">
-            <div class="about-left">
+            <div class="about-left wow fadeInDown">
                 <h2>О сервисе</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
             </div>
-            <div class="about-right"></div>
+            <div class="about-right wow fadeInRight"></div>
         </div>
 
+    </section>
+    <section id="music">
+        <div class="wrap">
+            <h2>Музыка <span>— наша музыкальная коллекция регулярно обновляется, а пользователи могут танцевать под свои треки!</span></h2>
+        </div>
     </section>
 </body>
 
