--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
     </section>
-    <section id="music">
+    <section id="music wow fadeInDown">
         <div class="wrap">
             <h2>Музыка <span>— наша музыкальная коллекция регулярно обновляется, а пользователи могут танцевать под свои треки!</span></h2>
         </div>
