--- a/index.html
+++ b/index.html
@@ -39,6 +39,28 @@
     <section id="music" class="wow fadeInDown">
         <div class="wrap">
             <h2>Музыка <span>— наша музыкальная коллекция регулярно обновляется, а пользователи могут танцевать под свои треки!</span></h2>
+            <div class="music-slider">
+                <div class="m-block"><img src="img/m-1.png" alt="">
+                    <div class="song-info">
+                        <span class="author">Madonna</span><span class="song">Living for love</span>
+                    </div>
+                </div>
+                <div class="m-block active"><img src="img/m-2.png" alt="">
+                    <div class="song-info">
+                        <span class="author">Adele</span><span class="song">Hello</span>
+                    </div>
+                </div>
+                <div class="m-block"><img src="img/m-3.png" alt="">
+                    <div class="song-info">
+                        <span class="author">Alessia Cara</span><span class="song">Four Pink Walls</span>
+                    </div>
+                </div>
+            </div>
+            <div class="m-pagination">
+                <div class="m-pag active"></div>
+                <div class="m-pag"></div>
+                <div class="m-pag"></div>
+            </div>
         </div>
     </section>
 </body>
