--- a/index.html
+++ b/index.html
@@ -64,6 +64,59 @@
             </div>
         </div>
     </section>
+    <section id="features" class="wow slideInUp">
+        <div class="wrap">
+            <h2>Преимущества</h2>
+            <div class="f-slider">
+                <div class="f-elem">
+                    <div class="f-img"><img src="img/free.png" alt=""></div>
+                    <div class="f-text">
+                        <div class="f-head">Бесплатно</div>
+                        <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                    </div>
+                </div>
+                <div class="f-pag">
+                    <div class="f-left"></div>
+                    <div class="f-right"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="howtostart">
+        <div class="wrap">
+            <h2>С чего начать?</h2>
+            <div class="steps">
+                <div class="s-column"></div>
+                <div class="s-column"></div>
+                <div class="s-column"></div>
+            </div>
+            <div class="button">Авторизация</div>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="wrap">
+            <div class="f-column">
+                <a href="#">Главная</a>
+                <a href="#">О сервисе</a>
+                <a href="#">Музыка</a>
+                <a href="#">Преимущества</a>
+                <a href="#">С чего начать?</a>
+                <a href="#">Помощь</a>
+                <a href="#">Предложенить песню</a>
+                <a href="#">Отзыв</a>
+            </div>
+            <div class="f-column">
+                <a href="#">FanDance</a>
+                <a href="#">Новости</a>
+                <a href="#">Каталог игр</a>
+                <a href="#">Форум</a>
+                <a href="#">Мы ВКонтакте</a>
+            </div>
+            <div class="f-column">
+                <img src="img/vk.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
