pre final release without js

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
         <div class="wrap">
             <h2>Музыка <span>— наша музыкальная коллекция регулярно обновляется, а пользователи могут танцевать под свои треки!</span></h2>
             <div class="music-slider">
-                <div class="m-block"><img src="img/m-1.png" alt="">
+                <div class="m-block wow fadeInLeft"><img src="img/m-1.png" alt="">
                     <div class="song-info">
                         <span class="author">Madonna</span><span class="song">Living for love</span>
                     </div>
                 </div>
-                <div class="m-block active"><img src="img/m-2.png" alt="">
+                <div class="m-block active wow fadeInUp"><img src="img/m-2.png" alt="">
                     <div class="song-info">
                         <span class="author">Adele</span><span class="song">Hello</span>
                     </div>
                 </div>
-                <div class="m-block"><img src="img/m-3.png" alt="">
+                <div class="m-block wow fadeInRight"><img src="img/m-3.png" alt="">
                     <div class="song-info">
                         <span class="author">Alessia Cara</span><span class="song">Four Pink Walls</span>
                     </div>
@@ -67,7 +67,7 @@
     <section id="features" class="wow slideInUp">
         <div class="wrap">
             <h2>Преимущества</h2>
-            <div class="f-slider">
+            <div class="f-slider wow fadeInUp">
                 <div class="f-elem">
                     <div class="f-img"><img src="img/free.png" alt=""></div>
                     <div class="f-text">
@@ -86,11 +86,23 @@
         <div class="wrap">
             <h2>С чего начать?</h2>
             <div class="steps">
-                <div class="s-column"></div>
-                <div class="s-column"></div>
-                <div class="s-column"></div>
+                <div class="s-column wow fadeInLeft">
+                    <div class="s-num">1</div>
+                    <div class="s-head">Авторизация</div>
+                    <div class="s-desc">Зайди на play.fandance.ru и авторизиуйся с помощью VK.</div>
+                </div>
+                <div class="s-column wow fadeInUp">
+                    <div class="s-num">2</div>
+                    <div class="s-head">Выбор трека</div>
+                    <div class="s-desc">Выбери любимый трек из музкальной библиотеки или загрузи свой с помощью URL. Не забудь выбрать бит!</div>
+                </div>
+                <div class="s-column wow fadeInRight">
+                    <div class="s-num">3</div>
+                    <div class="s-head">Танцуй!</div>
+                    <div class="s-desc">Набирай комбинацию стрелок на клавиатуре, которые ты видишь, жми пробел, когда ползунок достигнет белой области. Зарабатывай очки, получай монеты и рассказывай друзьям!</div>
+                </div>
             </div>
-            <div class="button">Авторизация</div>
+            <div class="button wow zoomIn">Авторизация</div>
         </div>
     </section>
     <section id="footer">
