--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="wrap">
             <div class="about-left wow fadeInDown">
                 <h2>О сервисе</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <p>«DanceOnline!» – сервис, позволяющий заменить все танцевальные игры! <br><br> Сервис создан в 2014 году, форумом танцевальных игр – FanDance. Мы регулярно проводим опросы у пользователей, и добавляем песни в свою музыкальную коллекцию. Также, мы постоянно совершенствуем и оптимизируем сервис. <br><br> В «DanceOnline!» вы можете тренировать свои танцевальные навыки. Просто авторизируйтесь, выберите песню и танцуйте! Набирайте комбинацию стрелок, которую видите на экране, а также нажимайте пробел, когда бегунок достигнет подсвеченной зоны. После завершения танца вы получите монеты и опыт, а также сможете посмотреть результаты танца и поделиться ими с друзьями!
+                </p>
             </div>
             <div class="about-right wow fadeInRight"></div>
         </div>
@@ -68,11 +69,37 @@
         <div class="wrap">
             <h2>Преимущества</h2>
             <div class="f-slider wow fadeInUp">
-                <div class="f-elem">
-                    <div class="f-img"><img src="img/free.png" alt=""></div>
-                    <div class="f-text">
-                        <div class="f-head">Бесплатно</div>
-                        <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                <div class="f-elems">
+
+
+                    <div class="f-elem">
+                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-text">
+                            <div class="f-head">Бесплатно</div>
+                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                        </div>
+                    </div>
+
+                    <div class="f-elem">
+                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-text">
+                            <div class="f-head">Бесплатно</div>
+                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                        </div>
+                    </div>
+                    <div class="f-elem">
+                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-text">
+                            <div class="f-head">Бесплатно</div>
+                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                        </div>
+                    </div>
+                    <div class="f-elem">
+                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-text">
+                            <div class="f-head">Бесплатно</div>
+                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                        </div>
                     </div>
                 </div>
                 <div class="f-pag">
@@ -125,7 +152,20 @@
                 <a href="#">Мы ВКонтакте</a>
             </div>
             <div class="f-column">
-                <img src="img/vk.png" alt="">
+                <script type="text/javascript" src="//vk.com/js/api/openapi.js?146"></script>
+
+                <!-- VK Widget -->
+                <div id="vk_groups"></div>
+                <script type="text/javascript">
+                    VK.Widgets.Group("vk_groups", {
+                        mode: 3,
+                        width: "293",
+                        color1: '333',
+                        color2: 'FFFFFF',
+                        color3: 'FFFFFF'
+                    }, 55487263);
+
+                </script>
             </div>
         </div>
     </section>
