--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
                     <div class="f-elem">
                         <div class="f-img"><img src="img/free.png" alt=""></div>
                         <div class="f-text">
-                            <div class="f-head">Бесплатно</div>
-                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                            <div class="f-head">Авторизация</div>
+                            <div class="f-desc">Для входа в сервис Вам нужно всего лишь иметь аккаунт ВКонтакте.</div>
                         </div>
                     </div>
                     <div class="f-elem">
                         <div class="f-img"><img src="img/free.png" alt=""></div>
                         <div class="f-text">
-                            <div class="f-head">Бесплатно</div>
-                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                            <div class="f-head">Любой трек</div>
+                            <div class="f-desc">Вы можете выбрать трек из нашей музыкальной коллекции, а можете загрузить свой!</div>
                         </div>
                     </div>
                     <div class="f-elem">
                         <div class="f-img"><img src="img/free.png" alt=""></div>
                         <div class="f-text">
-                            <div class="f-head">Бесплатно</div>
-                            <div class="f-desc">Мы предоставляем наш сервис абсолютно бесплатно! Вы можете воспользоваться всеми функциями прямо сейчас.</div>
+                            <div class="f-head">Статистика</div>
+                            <div class="f-desc">После каждого танца Вы можете посмотреть оценку, заработать монеты и попасть в рейтинг танцоров.</div>
                         </div>
                     </div>
                 </div>
