--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" lang="ru">
     <title>DanceOnline!</title>
     <meta name="viewport" content="width=940, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <meta name="description" content="«DanceOnline!» – сервис, позволяющий заменить все танцевальные игры!">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
 
     </script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/script.js"></script>
 </head>
 
@@ -52,13 +53,13 @@
                         <span class="author">Adele</span><span class="song">Hello</span>
                     </div>
                 </div>
-                <div class="m-block wow fadeInRight"><img src="img/m-3.png" alt="">
+                <div class="m-block wow fadeInRight"><img src="img/1.jpg" alt="">
                     <div class="song-info">
-                        <span class="author">Alessia Cara</span><span class="song">Four Pink Walls</span>
+                        <span class="author">BLACKPINK</span><span class="song">Boombayah</span>
                     </div>
                 </div>
             </div>
-            <div class="m-pagination">
+            <div class="m-pagination" style="display: none;">
                 <div class="m-pag active"></div>
                 <div class="m-pag"></div>
                 <div class="m-pag"></div>
@@ -81,21 +82,21 @@
                     </div>
 
                     <div class="f-elem">
-                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-img"><img src="img/vk_i.png" alt=""></div>
                         <div class="f-text">
                             <div class="f-head">Авторизация</div>
                             <div class="f-desc">Для входа в сервис Вам нужно всего лишь иметь аккаунт ВКонтакте.</div>
                         </div>
                     </div>
                     <div class="f-elem">
-                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-img"><img src="img/mus.png" alt=""></div>
                         <div class="f-text">
                             <div class="f-head">Любой трек</div>
                             <div class="f-desc">Вы можете выбрать трек из нашей музыкальной коллекции, а можете загрузить свой!</div>
                         </div>
                     </div>
                     <div class="f-elem">
-                        <div class="f-img"><img src="img/free.png" alt=""></div>
+                        <div class="f-img"><img src="img/stat.png" alt=""></div>
                         <div class="f-text">
                             <div class="f-head">Статистика</div>
                             <div class="f-desc">После каждого танца Вы можете посмотреть оценку, заработать монеты и попасть в рейтинг танцоров.</div>
@@ -141,7 +142,7 @@
                 <a href="#">Преимущества</a>
                 <a href="#">С чего начать?</a>
                 <a href="#">Помощь</a>
-                <a href="#">Предложенить песню</a>
+                <a href="#">Предложить песню</a>
                 <a href="#">Отзыв</a>
             </div>
             <div class="f-column">
