meta tags update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=940, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <meta name="description" content="«DanceOnline!» – сервис, позволяющий заменить все танцевальные игры!">
+    <meta name="description" content="«DanceOnline!» – сервис, позволяющий заменить все танцевальные игры!В «DanceOnline!» вы можете тренировать свои танцевальные навыки. Просто авторизируйтесь, выберите песню и танцуйте! ">
+    <meta property="og:title" content="DanceOnline!" />
+    <meta property="og:type" content="page" />
+    <meta property="og:image" content="http://fandance.ru/images/prew.jpg" />
+    <meta property="og:description" content="«DanceOnline!» – сервис, позволяющий заменить все танцевальные игры!В «DanceOnline!» вы можете тренировать свои танцевальные навыки. Просто авторизируйтесь, выберите песню и танцуйте! " />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
